// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderList /> check how renders should render everything correctly with one item and type SELL_HISTORY 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
}

.c1 {
  padding: 2.4rem 0;
  border-bottom: 1px solid #BFBFBF;
}

.c1:first-child {
  padding-top: 0;
}

.c4 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c4:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c6 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > *:not(:last-child) {
  margin-right: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 > *:not(:last-child) {
  margin-right: 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c7 {
  padding-top: 2.4rem;
}

.c7:last-child {
  padding-bottom: 0;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c10 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c10 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c10 .name > a:hover {
  color: #06AD96;
}

.c9 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c9 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c13 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c14 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c17 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.5rem;
}

.c18 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
}

.c16 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c16:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

@media only screen and (max-width:56.25em) {
  .c10 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c10 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c10 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c12 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="c3"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            buyer 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="c4"
            >
              buyerUser
            </span>
          </a>
        </span>
        <span
          class="c5"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          17 Feb 2021, 02:53
        </span>
      </div>
      <div
        class="c6 c7"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="c8 c9"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="c10"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="c11 c12"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c13"
              color="#777"
              data-testid="TransactionAndOrderProdItem-product-price-per-piece"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="c14"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="c15"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="c16"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="c17"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="c18"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $12.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OrderList /> check how renders should render everything correctly with two items and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
}

.c1 {
  padding: 2.4rem 0;
  border-bottom: 1px solid #BFBFBF;
}

.c1:first-child {
  padding-top: 0;
}

.c4 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c4:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c6 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > *:not(:last-child) {
  margin-right: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 > *:not(:last-child) {
  margin-right: 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c7 {
  padding-top: 2.4rem;
}

.c7:last-child {
  padding-bottom: 0;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c10 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c10 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c10 .name > a:hover {
  color: #06AD96;
}

.c9 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c9 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c13 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c14 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c17 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.5rem;
}

.c18 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
}

.c16 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c16:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

@media only screen and (max-width:56.25em) {
  .c10 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c10 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c10 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c12 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="c3"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            seller 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="c4"
            >
              sellerUser
            </span>
          </a>
        </span>
        <span
          class="c5"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          8 Jan 2021, 12:08
        </span>
      </div>
      <div
        class="c6 c7"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="c8 c9"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="c10"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="c11 c12"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c13"
              color="#777"
              data-testid="TransactionAndOrderProdItem-product-price-per-piece"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              4 x $4
            </span>
            <span
              class="c14"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $16
            </span>
          </div>
        </div>
      </div>
      <div
        class="c6 c7"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="c8 c9"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product2"
              data-testid="ProductThumbnail-img"
              src="no-photo.png"
            />
          </div>
        </a>
        <div
          class="c10"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product2
            </a>
          </span>
          <div
            class="c11 c12"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c13"
              color="#777"
              data-testid="TransactionAndOrderProdItem-product-price-per-piece"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="c14"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="c15"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="c16"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="c17"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="c18"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $28.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
